--- a/about.html
+++ b/about.html
@@ -28,39 +28,40 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md fixed-top ms-auto">
-      <a href="index.html" style="color: white" class="navbar-brand px-3"
-        >rengginangblog</a
-      >
-      <button
-        class="navbar-toggler border-0"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mobileMenu"
-        aria-controls="mobileMenu"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon border-0"></span>
-      </button>
-      <div class="border-0 col-2 collapse navbar-collapse" id="mobileMenu">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="blog.html" class="px-3 nav-link" style="color: white"
-              >blog</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="about.html" class="px-3 nav-link" style="color: white"
-              >about</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-md fixed-top">
+  <a href="index.html"class="navbar-brand text-white px-md-3 px-sm-3"
+    >rengginangblog</a
+  >
+  <button
+    class="navbar-toggler border-0 bg-light"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#mobileMenu"
+    aria-controls="mobileMenu"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon border-0"></span>
+  </button>
+  <div class="border-0 col-2 px-3 collapse navbar-collapse" id="mobileMenu">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a href="blog.html" class="nav-link text-white"  
+          >blog</a
+        >
+      </li>
+      <li class="nav-item">
+        <a href="about.html" class="nav-link text-white" 
+          >about</a
+        >
+      </li>
+    </ul>
+  </div>
+</nav>
     <!-- Profile -->
-    <div class="container-fluid" style="margin-top: 70px">
-      <div class="card px-4 py-4 rounded shadow back">
+    <div class="container-fluid px-5" style="margin-top: 70px">
+      <div class="card px-2 py-2  rounded-5 shadow back">
         <div class="row">
           <div class="card-body col-md-4">
             <img
