--- a/blog.html
+++ b/blog.html
@@ -27,51 +27,47 @@
     ></script>
   </head>
   <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md fixed-top">
-      <a href="index.html" style="color: white" class="navbar-brand px-3"
-        >rengginangblog</a
-      >
-      <button
-        class="navbar-toggler border-0"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#toggleMobileMenu"
-        aria-controls="toggleMobileMenu"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon border-0"></span>
-      </button>
-      <div
-        class="border-0 col-2 collapse navbar-collapse"
-        id="toggleMobileMenu"
-      >
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="blog.html" class="px-3 nav-link" style="color: white"
-              >blog</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="about.html" class="px-3 nav-link" style="color: white"
-              >about</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
-
+<!-- Navbar -->
+<nav class="navbar navbar-expand-md fixed-top">
+  <a href="index.html"class="navbar-brand text-white px-md-3 px-sm-3"
+    >rengginangblog</a
+  >
+  <button
+    class="navbar-toggler border-0 bg-light"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#mobileMenu"
+    aria-controls="mobileMenu"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon border-0"></span>
+  </button>
+  <div class="border-0 col-2 px-3 collapse navbar-collapse" id="mobileMenu">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a href="blog.html" class="nav-link text-white"  
+          >blog</a
+        >
+      </li>
+      <li class="nav-item">
+        <a href="about.html" class="nav-link text-white" 
+          >about</a
+        >
+      </li>
+    </ul>
+  </div>
+</nav>
     <!-- blog post -->
-    <div class="container-fluid" style="margin-top: 70px">
-      <div class="col">
-        <div class="card px-1 py-1 rounded shadow">
+    <div class="container-fluid px-5" style="margin-top: 70px">
+      <div class="col px-5">
+        <div class="card px-1 py-1 rounded-5 shadow">
           <div class="row">
             <div class="card-body col-md-4">
-              <img src="img/catikuyo.jpg" class="img-fluid card-img" />
+              <img src="img/catikuyo.jpg" class="img-fluid rounded-5 card-img" />
             </div>
             <div class="col-md-8">
-              <div class="mx-3 my-4">
+              <div class="my-2">
                 <div class="row">
                   <div class="">
                     <h1>Some Stuff</h1>
@@ -88,99 +84,5 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="col"><div class="card px-1 py-1 rounded shadow">
-        <div class="row">
-          <div class="card-body col-md-4">
-            <img src="img/catikuyo.jpg" class="img-fluid card-img" />
-          </div>
-          <div class="col-md-8">
-            <div class="mx-3 my-4">
-              <div class="row">
-                <div class="">
-                  <h1>Some Stuff</h1>
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Vel corrupti est perspiciatis magnam eos repellendus
-                    ratione, officiis odit alias illum delectus itaque
-                    recusandae assumenda laborum quidem, reiciendis magni
-                    obcaecati ad.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div></div>
-      <div class="col"><div class="card px-1 py-1 rounded shadow">
-        <div class="row">
-          <div class="card-body col-md-4">
-            <img src="img/catikuyo.jpg" class="img-fluid card-img" />
-          </div>
-          <div class="col-md-8">
-            <div class="mx-3 my-4">
-              <div class="row">
-                <div class="">
-                  <h1>Some Stuff</h1>
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Vel corrupti est perspiciatis magnam eos repellendus
-                    ratione, officiis odit alias illum delectus itaque
-                    recusandae assumenda laborum quidem, reiciendis magni
-                    obcaecati ad.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div></div>
-      <div class="col"><div class="card px-1 py-1 rounded shadow">
-        <div class="row">
-          <div class="card-body col-md-4">
-            <img src="img/catikuyo.jpg" class="img-fluid card-img" />
-          </div>
-          <div class="col-md-8">
-            <div class="mx-3 my-4">
-              <div class="row">
-                <div class="">
-                  <h1>Some Stuff</h1>
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Vel corrupti est perspiciatis magnam eos repellendus
-                    ratione, officiis odit alias illum delectus itaque
-                    recusandae assumenda laborum quidem, reiciendis magni
-                    obcaecati ad.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div></div>
-      <div class="col"><div class="card px-1 py-1 rounded shadow">
-        <div class="row">
-          <div class="card-body col-md-4">
-            <img src="img/catikuyo.jpg" class="img-fluid card-img" />
-          </div>
-          <div class="col-md-8">
-            <div class="mx-3 my-4">
-              <div class="row">
-                <div class="">
-                  <h1>Some Stuff</h1>
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Vel corrupti est perspiciatis magnam eos repellendus
-                    ratione, officiis odit alias illum delectus itaque
-                    recusandae assumenda laborum quidem, reiciendis magni
-                    obcaecati ad.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div></div>
-    </div>
   </body>
 </html>
